--- a/Attempt 2/sass/components/_nav.scss
+++ b/Attempt 2/sass/components/_nav.scss
@@ -29,7 +29,7 @@
     margin: 0px;
     .nav-link {
       display: inline-block;
-      padding: 42px 10px 42px 10px;
+      padding: 42px 24px 42px 24px;
       position: relative;
       &:hover {
         background-color: rgba(0, 0, 0, 0.3);
@@ -57,16 +57,15 @@
       background-color: $dark_primary;
       padding: 0px;
       position: absolute;
-      top: 104px;
+      top: 100px;
       left: 0px;
       z-index: 9999;
 
       &-item {
-        padding: 14px 8px;
+        padding: 14px 24px;
         &:hover {
           background: rgba(#000, 0.1);
         }
-        a{}
       }
     }
   }
